# Parser

./: CMakeLists.txt  main.cpp
results/: test.txt
stringParser/: Serializer.h  comfyParse.h  curlParse.h  stringParse.h
